# Ditto190-_-mcapp-ai-starter

./: .cursorrules  .env.codespaces  .env.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .mcp.json.bak.orig  .mcp.json.disabled  .spectral.yaml  AGENT-EXAMPLE-COMPLETE.md  AGENTS-IMPROVEMENT-SPEC.md  AGENTS-revised.md  AGENTS.md  COMPREHENSIVE-SKILLS-MAPPING.md  CONNECTION_GUIDE.md  DEVELOPER-QUICKSTART.md  DOCUMENTATION-INDEX.md  DOCUMENTATION_UPDATE_COMPLETE.md  EXECUTIVE-SUMMARY.md  GITLAB_SETUP.md  IMPLEMENTATION-SUMMARY.md  INSTALLATION_COMPLETE.md  Makefile  N8N_AI_ASSISTANT_SETUP.md  N8N_AUTONOMOUS_AGENT_GUIDE.md  PHASE-2-DISCOVERY-COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELEASES.md  SETUP_COMPLETE.md  SKILL-CONVERSION-DELIVERY.md  SKILLS-CONVERSION-INDEX.md  SKILLS-CONVERSION-PIPELINE.md  SKILLS-DISCOVERY-INVENTORY.md  SKILLS-QUICK-REFERENCE.md  TODO.md  UV_SETUP_GUIDE.md  (+16 more)
.contextstream/: config.json  workspace.json
.cursor/: hooks.json
.devcontainer/: devcontainer-clean.json  devcontainer.json  devcontainer.vim.json  post-create.sh  pre-install.sh  verify-setup.sh
consolidated_sources/GenerateAgents.md/: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
consolidated_sources/GenerateAgents.md/projects/dspy/: AGENTS.md
consolidated_sources/GenerateAgents.md/projects/fastapi/: AGENTS.md
consolidated_sources/GenerateAgents.md/projects/flagsmith/: AGENTS.md
consolidated_sources/GenerateAgents.md/projects/flask/: AGENTS.md  AGENTS_comprehensive.md
consolidated_sources/GenerateAgents.md/src/autogenerateagentsmd/: cli.py  model_config.py  modules.py  signatures.py  utils.py
consolidated_sources/GenerateAgents.md/tests/: conftest.py  test_analyze_git_history.py  test_cli.py  test_e2e_pipeline.py  test_model_config.py  test_modules.py  test_utils.py
generateagents-mcp/: AGENTS.md  AGENTSPEC_MVP.md  AGENTSPEC_MVP_QUICKREF.md  AGENTSPEC_MVP_SUMMARY.md  AGENTSPEC_PATTERNS_FROM_SMALLAGENTS_POC.md  DELIVERY.md  DEPLOYMENT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  agentspec_integration.py  agentspec_mvp.py  claude-desktop-mcp-config.json  integration-examples.py  openai-function-spec.json  pyproject.toml  server.py  setup.py  verify.py  vscode-copilot-mcp-config.json
generateagents-mcp/docs/reflections/: agentspec-mvp-technical-reflection.md
generateagents-mcp/generateagents_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
generateagents-mcp/tests/: test_agentspec_integration.py  test_agentspec_mvp.py  test_mcp_server_integration.py  test_mvp_integration.py  test_validation_cascade.py
(+1030 files in other folders)
